sticky z-index fix2

--- a/public/carhouse/css/app.css
+++ b/public/carhouse/css/app.css
@@ -2233,6 +2233,11 @@ footer .footer-item .gallery-item {
     z-index: 10;
 }
 
+.inner-wrapper-sticky{
+    position: relative;
+    z-index: 10;
+}
+
 .sidebar .search-btn{
     width: 100%;
     margin-bottom: 20px;
